--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,9 @@ machine:
     PROFILE_UUID: 30fc0261-b07e-421a-8b11-ae29168827d2
     TESTFLIGHT_DIST_LIST: your-dist-list-name
 dependencies:
+  pre:
+    - brew install carthage
+    - carthage bootstrap --platform iOS
   override:
     - pod install:
         timeout: 300
