--- a/circle.yml
+++ b/circle.yml
@@ -1,21 +1,9 @@
 machine:
   xcode:
     version: '7.0'
-  environment:
-    XCODE_SCHEME: CircleCI-Sample
-    XCODE_WORKSPACE: CircleCI-Sample.xcworkspace
-    DEVELOPER_NAME: 'iPhone Distribution: Takahiro Horikawa (HSM2AYDCY3)'
-    APPNAME: CircleCI-Sample
-    PROFILE_UUID: 30fc0261-b07e-421a-8b11-ae29168827d2
-    TESTFLIGHT_DIST_LIST: your-dist-list-name
 dependencies:
   pre:
     - brew install carthage
+test:
+  pre:
     - carthage bootstrap --platform iOS
-deployment:
-  testflight:
-    branch: master
-    commands:
-      - ./scripts/add-key.sh
-      - ./scripts/testflight.sh
-      - ./scripts/remove-key.sh
